# Terminal-Docks

./: .gitignore  .tmp-MissionControlPane.tsx.bak  PRD.md  README.md  architecture.md  fix.cjs  fix_errors.mjs  index.html  mcp-checklist.md  package-lock.json  package.json  plan.md  replace.cjs  strip.mjs  test_push.mjs  tsconfig.graph-tests.json  vite.config.ts
.claude/: settings.local.json
.mcp/: server.json  tasks.db  tasks.db-shm  tasks.db-wal
.wolf/: buglog.json  cerebrum.md  memory.md
backend/: Cargo.toml
backend/src/: agent_run.rs  db.rs  main.rs  mcp.rs  pty.rs  swarm.rs  workflow_engine.rs  workflow_log.rs  workspace.rs
dist-electron/: main.js  preload.js
docs/: README.md  agents.md  architecture.md  cao-quality-refactor-agent-guide.md  claude.md  control-planes.md  frontend-framework-status.md  mcp-tool-contracts.md  persistence-ownership.md  plan.md  provider-adapters.md  report_prompt05_mixed_cli_20260508.md  repository-map.md  runtime-ui-mcp-plan.md  workflow-execution-fix.md  workflow-runtime-plan.md
electron/: main.ts  preload.ts  tsconfig.json
mcp-server/: DESIGN.md  PRD.md  README.md  agentB.err  check_handshake.mjs  manual_client.mjs  package-lock.json  package.json  persistence.mjs  server.mjs  server.mjs.bak  server.out  server_new.out  services.mjs  structure.md  test_internal_push.mjs  test_relay.mjs
scripts/: check-bundle-size.mjs  control-plane-client.mjs  copy-material-icons.mjs  live-workflow-preflight.ps1  measure-tauri-dev-startup.ps1  report-build-size.mjs  tdctl.mjs  workspace-editor-qa.ps1
src-tauri/: 2  Cargo.toml  (+2 more)
(+440 files in other folders)
