[package]
name = "backend"
version = "0.1.0"
description = "A JSON-RPC standalone binary"
authors = ["you"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
notify = "6"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
